Closed
Bug 1053783
Opened 11 years ago
Closed 10 years ago
New window gets out of focus after exiting full screen mode
Categories
(Core :: Widget: Win32, defect)
Tracking
()
VERIFIED
FIXED
mozilla38
People
(Reporter: FlorinMezei, Assigned: xidorn)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
|
1.79 KB,
patch
|
jimm
:
review+
Sylvestre
:
approval-mozilla-aurora+
Sylvestre
:
approval-mozilla-beta-
|
Details | Diff | Splinter Review |
Reproducible with:
Firefox 32 Beta 6 - BuildID: 20140811180644
Latest Firefox 33 Aurora - BuildID: 20140813004001
Latest Firefox 34 Nightly - BuildID: 20140813030201
Environment: Windows Vista x64, Windows 8 x64, Windows 8.1 x64 - could NOT reproduce the issue on Windows 7 x64
Steps to reproduce:
1. Open Firefox with a new profile.
2. Open a New Window (<Ctrl> + N).
3. Navigate to a page with a video of some sort (http://goo.gl/nQI91A).
4. <ALT> + <Tab> to some other application window (e.g. Skype), and then back to the new Firefox window.
5. Select the video's full screen button ---> Video opens in full screen as expected.
5. Press the full screen button again (or use the Esc key) to exit full screen mode.
Expected results:
Video exits full screen, and the Firefox window with the video remains in focus.
Actual results:
Video exits full screen, but the Firefox window with the video is now out of focus. The application window from step #4 (e.g. Skype) is now in focus as it displays over the Firefox window. See http://www.screencast.com/t/tkc2mzsLOi.
Notes:
- the issue is a regression from Firefox 29 (it does NOT reproduce in Firefox 28 or earlier, but reproduces in Firefox 29.0.1 and later).
- the issue reproduces with multiple video pages (http://goo.gl/whqLoR, http://goo.gl/QA0tdD, http://goo.gl/CZXxPQ), but does NOT reproduce for Youtube videos.
Updated•11 years ago
|
Keywords: regressionwindow-wanted
Comment 1•11 years ago
|
||
This bug is not only for HTML5 video fullscreen but also Element Fullscreen.
Steps to reproduce:
1. Open Firefox[A] with a new profile.
2. Open a New Window[B] (<Ctrl> + N).
3. Open attachment 574011 [details]
4. <ALT> + <Tab> to some other application window[C] (e.g. Skype), and then back to the new Firefox window[B].
5. Click "full" button ---> A element is in full screen as expected.
6. Press Esc key) to exit full screen mode.
Actual Results:
window[C] is focused and top most.
Expected Results:
Firefox window[B] ahouls be focused and top most.
This is a implementation bug of Bug 545812 since Firefox9....
Regression window(m-i)
Not implimentated DOM Fullscreen API:
http://hg.mozilla.org/integration/mozilla-inbound/rev/81ebc148aad3
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:9.0a1) Gecko/20110904 Firefox/9.0a1 ID:20110904121620
Bad(implement DOM Fullscreen API, foece set full-screen-api.enabled = true):
http://hg.mozilla.org/integration/mozilla-inbound/rev/d7cd9750988a
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:9.0a1) Gecko/20110904 Firefox/9.0a1 ID:20110904134605
Pushlog:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=81ebc148aad3&tochange=d7cd9750988a
Bug caused by Bug 545812
Blocks: 545812
| Reporter | ||
Comment 2•11 years ago
|
||
Removing keyword since Alice provided the regression window. Thanks Alice!
Keywords: regressionwindow-wanted
| Reporter | ||
Comment 3•11 years ago
|
||
Another scenario for this same issue I believe, in Firefox 33.1.1:
1. Open Firefox with a new profile.
2. Go to http://www.youtube.com/html5 and make sure the HTML5 player is set.
3. Go to a youtube video (make sure it's in HTML5).
4. Go to Tools->Web Developer->Browser Console.
4. <ALT> + <Tab> to some other application window (e.g. Chrome), and then back to Firefox.
5. Select the video's full screen button ---> Video opens in full screen as expected.
5. Press the full screen button again (or use the Esc key) to exit full screen mode.
Actual results:
Video exits full screen, but the Firefox window with the video is now out of focus. The application window from step #4 (e.g. Skype) is now in focus as it displays over the Firefox window.
This reproduced in Windows 8.1 x64... NOT reproducible on Windows 7 x64, just as for the original scenario.
| Reporter | ||
Updated•11 years ago
|
status-firefox35:
--- → affected
| Assignee | ||
Updated•10 years ago
|
Version: 32 Branch → Trunk
| Assignee | ||
Updated•10 years ago
|
Component: Video/Audio → Widget: Win32
| Assignee | ||
Comment 4•10 years ago
|
||
It happens when exiting either fullscreen mode or DOM fullscreen.
Summary: New window gets out of focus after exiting full screen video → New window gets out of focus after exiting full screen mode
| Assignee | ||
Comment 5•10 years ago
|
||
Attachment #8559537 -
Flags: review?(jmathies)
Updated•10 years ago
|
Attachment #8559537 -
Flags: review?(jmathies) → review+
| Assignee | ||
Comment 6•10 years ago
|
||
| Assignee | ||
Comment 7•10 years ago
|
||
Comment 8•10 years ago
|
||
Assignee: nobody → quanxunzhen
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox38:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
| Assignee | ||
Comment 9•10 years ago
|
||
Comment on attachment 8559537 [details] [diff] [review]
patch
Approval Request Comment
[Feature/regressing bug #]: bug 688929 should be the fundamental reason
[User impact if declined]: users continue to experience the window losing focus when they exit fullscreen
[Describe test coverage new/current, TreeHerder]: no test
[Risks and why]: AFAICS, no risk
[String/UUID change made/needed]: n/a
Attachment #8559537 -
Flags: approval-mozilla-beta?
Attachment #8559537 -
Flags: approval-mozilla-aurora?
Comment 10•10 years ago
|
||
Comment on attachment 8559537 [details] [diff] [review]
patch
We are late in the beta cycle and we have this bug for a while... It will ride the train with 37.
Attachment #8559537 -
Flags: approval-mozilla-beta?
Attachment #8559537 -
Flags: approval-mozilla-beta-
Attachment #8559537 -
Flags: approval-mozilla-aurora?
Attachment #8559537 -
Flags: approval-mozilla-aurora+
Updated•10 years ago
|
Comment 11•10 years ago
|
||
| Reporter | ||
Comment 12•10 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•