Bug 1053783 - Activate window after exiting fullscreen. r=jimm